--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "author": "Daniel Belohlavek",
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^4.1.5",
     "babelify": "^6.1.3",
     "browser-sync": "^2.8.0",
     "browserify": "^11.0.0",
     "del": "^1.2.0",
     "eslint": "^1.9.0",
+    "eslint-config-airbnb": "^1.0.0",
     "exorcist": "^0.4.0",
     "gulp": "^3.9.0",
     "gulp-buffer": "0.0.2",
