--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "exorcist": "^0.4.0",
     "gulp": "^3.9.0",
     "gulp-buffer": "0.0.2",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-if": "^1.2.5",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "run-sequence": "^1.1.4",
     "vinyl-source-stream": "^1.1.0",
     "yargs": "^3.16.1"
   },
