add redux to store board state

--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "airbnb/base",
   "rules": {
     "indent": [2, 4],
+    "no-use-before-define": [2, "nofunc"],
   },
   "globals": {
     "Phaser": true,
