--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "yargs": "^3.16.1"
   },
   "dependencies": {
-    "phaser": "^2.4.1"
+    "core-decorators": "^0.8.1",
+    "immutable": "^3.7.5",
+    "phaser": "^2.4.1",
+    "redux": "^3.0.4",
+    "redux-logger": "^2.0.4"
   }
 }
